--- a/src/main/resources/org/example/demo/hello-view.fxml
+++ b/src/main/resources/org/example/demo/hello-view.fxml
@@ -10,21 +10,21 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo.HelloController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo.HelloController">
    <children>
       <HBox maxHeight="100.0" prefHeight="100.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
          <children>
-            <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#openNewWindow" prefHeight="40.0" prefWidth="140.0" text="Add">
+            <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#openNewWindow" prefHeight="40.0" prefWidth="140.0" stylesheets="@my.css" text="Add">
                <HBox.margin>
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="btnEdit" mnemonicParsing="false" onAction="#openNewWindow" prefHeight="40.0" prefWidth="140.0" text="Edit">
+            <Button fx:id="btnEdit" mnemonicParsing="false" onAction="#openNewWindow" prefHeight="40.0" prefWidth="140.0" stylesheets="@my.css" text="Edit">
                <HBox.margin>
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#new_Alert" prefHeight="40.0" prefWidth="140.0" text="Delete">
+            <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#new_Alert" prefHeight="40.0" prefWidth="140.0" stylesheets="@my.css" text="Delete">
                <HBox.margin>
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </HBox.margin>
@@ -37,7 +37,7 @@
          </VBox.margin>
          <children>
             <TextField fx:id="txtSearch" layoutY="26.0" prefHeight="40.0" prefWidth="310.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="230.39999999999998" />
-            <Button fx:id="btnSearch" layoutX="399.0" layoutY="26.0" mnemonicParsing="false" onAction="#search" prefHeight="40.0" prefWidth="140.0" text="Search" AnchorPane.rightAnchor="0.20000000000004547" />
+            <Button fx:id="btnSearch" layoutX="399.0" layoutY="26.0" mnemonicParsing="false" onAction="#search" prefHeight="40.0" prefWidth="140.0" stylesheets="@my.css" text="Search" AnchorPane.rightAnchor="0.20000000000004547" />
          </children>
       </AnchorPane>
       <AnchorPane prefHeight="300.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
