--- a/src/main/resources/org/example/demo/hello-view.fxml
+++ b/src/main/resources/org/example/demo/hello-view.fxml
@@ -56,12 +56,13 @@
             </TableView>
          </children>
       </AnchorPane>
-      <AnchorPane maxHeight="100.0" prefHeight="100.0" prefWidth="600.0">
+      <AnchorPane maxHeight="100.0" prefHeight="89.0" prefWidth="540.0">
          <VBox.margin>
             <Insets bottom="30.0" left="30.0" right="30.0" />
          </VBox.margin>
          <children>
             <Label layoutX="8.0" layoutY="70.0" text="Number of records:" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
+            <Button fx:id="btnSearch" layoutX="206.0" layoutY="48.0" mnemonicParsing="false" onAction="#openNewWindowOtherLabs" prefHeight="40.0" prefWidth="129.0" stylesheets="@my.css" text="Other Labs" />
          </children>
       </AnchorPane>
    </children>
