--- a/src/main/resources/org/example/demo/hello-view.fxml
+++ b/src/main/resources/org/example/demo/hello-view.fxml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo.HelloController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo.HelloController">
    <children>
       <HBox maxHeight="100.0" prefHeight="100.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
          <children>
@@ -45,10 +39,10 @@
             <Insets left="30.0" right="30.0" />
          </VBox.margin>
          <children>
-            <TableView layoutX="95.0" layoutY="28.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <TableView fx:id="tableAddressBook" layoutX="95.0" layoutY="28.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <columns>
-                <TableColumn prefWidth="75.0" text="Full name" />
-                <TableColumn prefWidth="75.0" text="Phone number" />
+                <TableColumn fx:id="columnPIP" prefWidth="75.0" text="Full name" />
+                <TableColumn fx:id="columnPhone" prefWidth="75.0" text="Phone number" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -61,7 +55,7 @@
             <Insets bottom="30.0" left="30.0" right="30.0" />
          </VBox.margin>
          <children>
-            <Label layoutX="8.0" layoutY="70.0" text="Number of records:" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
+            <Label fx:id="labelCount" layoutX="8.0" layoutY="70.0" text="Number of records:" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
             <Button fx:id="btnSearch" layoutX="206.0" layoutY="48.0" mnemonicParsing="false" onAction="#openNewWindowOtherLabs" prefHeight="40.0" prefWidth="129.0" stylesheets="@my.css" text="Other Labs" />
          </children>
       </AnchorPane>
