--- a/src/main/resources/org/example/demo/hello-view.fxml
+++ b/src/main/resources/org/example/demo/hello-view.fxml
@@ -8,12 +8,12 @@
    <children>
       <HBox maxHeight="100.0" prefHeight="100.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
          <children>
-            <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#openNewWindow" prefHeight="40.0" prefWidth="140.0" stylesheets="@my.css" text="Add">
+            <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#openWindow" prefHeight="40.0" prefWidth="140.0" stylesheets="@my.css" text="Add">
                <HBox.margin>
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="btnEdit" mnemonicParsing="false" onAction="#openNewWindow" prefHeight="40.0" prefWidth="140.0" stylesheets="@my.css" text="Edit">
+            <Button fx:id="btnEdit" mnemonicParsing="false" onAction="#openWindow" prefHeight="40.0" prefWidth="140.0" stylesheets="@my.css" text="Edit">
                <HBox.margin>
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </HBox.margin>
@@ -41,7 +41,7 @@
          <children>
             <TableView fx:id="tableAddressBook" layoutX="95.0" layoutY="28.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <columns>
-                <TableColumn fx:id="columnPIP" prefWidth="75.0" text="Full name" />
+                <TableColumn fx:id="columnPip" prefWidth="75.0" text="Full name" />
                 <TableColumn fx:id="columnPhone" prefWidth="75.0" text="Phone number" />
               </columns>
                <columnResizePolicy>
