--- a/src/main/resources/org/example/demo/hello-view.fxml
+++ b/src/main/resources/org/example/demo/hello-view.fxml
@@ -1,11 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckMenuItem?>
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.RadioMenuItem?>
+<?import javafx.scene.control.SeparatorMenuItem?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.input.KeyCodeCombination?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo.HelloController">
+<VBox fx:id="scenePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo.HelloController">
    <children>
+      <MenuBar>
+         <menus>
+            <Menu mnemonicParsing="false" text="File">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="New" />
+                  <Menu mnemonicParsing="false" text="New From Tamplate">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="Alert Dialog" />
+                        <MenuItem mnemonicParsing="false" text="Basic Application" />
+                        <CheckMenuItem mnemonicParsing="false" text="Show Details" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem mnemonicParsing="false" onAction="#exitButton" text="Exit">
+                           <accelerator>
+                              <KeyCodeCombination alt="UP" code="Q" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                           </accelerator>
+                        </MenuItem>
+                     </items>
+                  </Menu>
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Edit">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Delete" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Insert">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="About" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Modify">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Action 1" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Arrange">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Action 1" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Preview">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Action 1" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Window">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Action 1" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Help">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Action 1" />
+               </items>
+            </Menu>
+         </menus>
+      </MenuBar>
       <HBox maxHeight="100.0" prefHeight="100.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
          <children>
             <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#openWindow" prefHeight="40.0" prefWidth="140.0" stylesheets="@my.css" text="Add">
@@ -30,7 +101,15 @@
             <Insets left="30.0" right="30.0" />
          </VBox.margin>
          <children>
-            <TextField fx:id="txtSearch" layoutY="26.0" prefHeight="40.0" prefWidth="310.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="230.39999999999998" />
+            <TextField fx:id="txtSearch" layoutY="21.0" onAction="#toggleContextText" prefHeight="40.0" prefWidth="310.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="230.0">
+               <contextMenu>
+                  <ContextMenu>
+                     <items>
+                        <RadioMenuItem mnemonicParsing="false" text="Add random text" />
+                        <RadioMenuItem mnemonicParsing="false" text="Clear" />
+                     </items>
+                  </ContextMenu>
+               </contextMenu></TextField>
             <Button fx:id="btnSearch" layoutX="399.0" layoutY="26.0" mnemonicParsing="false" onAction="#search" prefHeight="40.0" prefWidth="140.0" stylesheets="@my.css" text="Search" AnchorPane.rightAnchor="0.20000000000004547" />
          </children>
       </AnchorPane>
@@ -57,6 +136,7 @@
          <children>
             <Label fx:id="labelCount" layoutX="8.0" layoutY="70.0" text="Number of records:" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
             <Button fx:id="btnSearch" layoutX="206.0" layoutY="48.0" mnemonicParsing="false" onAction="#openNewWindowOtherLabs" prefHeight="40.0" prefWidth="129.0" stylesheets="@my.css" text="Other Labs" />
+            <Button fx:id="btnTest" layoutX="228.0" layoutY="10.0" mnemonicParsing="false" onAction="#openNewWindow" prefHeight="23.0" prefWidth="86.0" stylesheets="@my.css" text="Test" />
          </children>
       </AnchorPane>
    </children>
