--- a/src/main/resources/org/example/demo/hello-view.fxml
+++ b/src/main/resources/org/example/demo/hello-view.fxml
@@ -137,6 +137,7 @@
             <Label fx:id="labelCount" layoutX="8.0" layoutY="70.0" text="Number of records:" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
             <Button fx:id="btnSearch" layoutX="206.0" layoutY="48.0" mnemonicParsing="false" onAction="#openNewWindowOtherLabs" prefHeight="40.0" prefWidth="129.0" stylesheets="@my.css" text="Other Labs" />
             <Button fx:id="btnTest" layoutX="228.0" layoutY="10.0" mnemonicParsing="false" onAction="#openNewWindow" prefHeight="23.0" prefWidth="86.0" stylesheets="@my.css" text="Test" />
+            <Button fx:id="btnDate" layoutX="14.0" layoutY="10.0" mnemonicParsing="false" onAction="#openDateWindow" prefHeight="23.0" prefWidth="86.0" stylesheets="@my.css" text="Date" />
          </children>
       </AnchorPane>
    </children>
