--- a/src/main/resources/org/example/demo/date.fxml
+++ b/src/main/resources/org/example/demo/date.fxml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo.DatePickerController">
+<AnchorPane fx:id="scenePane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo.DatePickerController">
    <children>
       <Label fx:id="dateLabel" alignment="CENTER" layoutX="112.0" layoutY="64.0" prefHeight="46.0" prefWidth="376.0" text="Label">
          <font>
             <Font size="24.0" />
          </font></Label>
       <DatePicker fx:id="myDatePicker" layoutX="30.0" layoutY="111.0" />
+      <ColorPicker fx:id="myColorPicker" layoutX="300.0" layoutY="111.0" onAction="#changeColor" />
+      <Slider fx:id="mySlider" layoutX="11.0" layoutY="186.0" majorTickUnit="10.0" prefHeight="14.0" prefWidth="579.0" showTickLabels="true" showTickMarks="true" value="10.0" />
+      <Label fx:id="sliderLabel" layoutX="11.0" layoutY="232.0" prefHeight="17.0" prefWidth="110.0" text="Select Brightness:" />
    </children>
 </AnchorPane>
