--- a/src/main/resources/org/example/demo/media.fxml
+++ b/src/main/resources/org/example/demo/media.fxml
@@ -2,13 +2,18 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.media.MediaView?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo.MediaController">
    <children>
-      <MediaView fx:id="mediaView" fitHeight="200.0" fitWidth="600.0" layoutX="186.0" layoutY="6.0" nodeOrientation="INHERIT" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <Button fx:id="playButton" layoutX="102.0" layoutY="236.0" mnemonicParsing="false" onAction="#playButton_method" prefHeight="42.0" prefWidth="86.0" text="PLAY" />
-      <Button fx:id="pauseButton" layoutX="248.0" layoutY="236.0" mnemonicParsing="false" onAction="#pauseButton_method" prefHeight="42.0" prefWidth="86.0" text="PAUSE" />
-      <Button fx:id="resetButton" layoutX="383.0" layoutY="236.0" mnemonicParsing="false" onAction="#resetButton_method" prefHeight="42.0" prefWidth="86.0" text="RESET" />
+      <StackPane layoutY="14.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="14.0">
+         <children>
+            <MediaView fx:id="mediaView" fitHeight="250.0" fitWidth="600.0" nodeOrientation="INHERIT" />
+         </children>
+      </StackPane>
+      <Button fx:id="playButton" layoutX="130.0" layoutY="314.0" mnemonicParsing="false" onAction="#playButton_method" prefHeight="42.0" prefWidth="86.0" text="PLAY" />
+      <Button fx:id="pauseButton" layoutX="257.0" layoutY="314.0" mnemonicParsing="false" onAction="#pauseButton_method" prefHeight="42.0" prefWidth="86.0" text="PAUSE" />
+      <Button fx:id="resetButton" layoutX="383.0" layoutY="314.0" mnemonicParsing="false" onAction="#resetButton_method" prefHeight="42.0" prefWidth="86.0" text="RESET" />
    </children>
 </AnchorPane>
